vllm/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vllm
  name: vllm
  namespace: vllm
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: vllm
      port: 8000
      protocol: TCP
      targetPort: vllm
  selector:
    app.kubernetes.io/name: vllm
  sessionAffinity: None
  type: ClusterIP
