vllm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-route
  namespace: vllm
spec:
  parentRefs:
    - name: crobceratops-gateway
      namespace: gateways
    - name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - vllm.crobceratops.ryanbeales.com
    - vllm.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: vllm-gemma3
          port: 8000
